[ADD] - Models / [UPDATE] - Autoload, Helpers & Libs

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
             "App\\" : "app/"
         },
         "files": [
-            "app/helpers.php"
+            "app/Helpers/Conversao.php",
+            "app/Helpers/Validacao.php"
         ]
     }
 }
